--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -112,7 +112,7 @@ jobs:
           template: ${{ matrix.template }}
           no-fail-on-empty-changeset: "1"
           asd: fgh
-          no-execute-changeset: "${{ steps.check-lint.no-execute-changeset }}"
+          no-execute-changeset: "1"
           capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM"
 
       # Only generate the changeset (validate) the template when not
@@ -126,5 +126,5 @@ jobs:
           name: ${{ steps.set-name.outputs.stack-name }}
           template: ${{ matrix.template }}
           no-fail-on-empty-changeset: "1"
-          no-execute-changeset: ${{ steps.check-lint.no-execute-changeset }}
+          no-execute-changeset: "1"
           capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM"
