--- a/cf/redis.yaml
+++ b/cf/redis.yaml
@@ -43,6 +43,9 @@ Resources:
       NumCacheClusters: 2
       Port: !Ref CachePort
       AutomaticFailoverEnabled: true
+      TransitEncryptionEnabled: true
+      #NOTE: for HIPAA compliance this should be specified
+      #AuthToken:
       PreferredMaintenanceWindow: Sun:04:00-Sun:05:00
       Tags:
         - Key: Name
@@ -68,10 +71,32 @@ Resources:
         - Key: StackName
           Value: !Ref AWS::StackName
       VpcId:
-        !ImportValue VPC
+        Fn::ImportValue:
+          !Sub "eksctl-biomage-${Environment}-cluster::VPC"
   
   CacheSubnetGroup:
     Type: AWS::ElastiCache::SubnetGroup
     Properties:
       Description: !Sub "Biomage subnet group for ${Environment}"
-      SubnetIds: !Split [ ',', !ImportValue SubnetsPrivate ]
+      SubnetIds:
+        Fn::Split:
+          - ','
+          - Fn::ImportValue: !Sub "eksctl-biomage-${Environment}-cluster::SubnetsPrivate"
+  
+Outputs:
+  PrimaryAddress:
+    Export:
+      Name: !Sub "${AWS::StackName}::PrimaryAddress"
+    Value: !GetAtt CacheClustersWithReplication.PrimaryEndPoint.Address
+  PrimaryPort:
+    Export:
+      Name: !Sub "${AWS::StackName}::PrimaryPort"
+    Value: !GetAtt CacheClustersWithReplication.PrimaryEndPoint.Port
+  ReplicaAddresses:
+    Export:
+      Name: !Sub "${AWS::StackName}::ReplicaAddresses"
+    Value: !GetAtt CacheClustersWithReplication.ReadEndPoint.Addresses
+  ReplicaPorts:
+    Export:
+      Name: !Sub "${AWS::StackName}::ReplicaPorts"
+    Value: !GetAtt CacheClustersWithReplication.ReadEndPoint.Ports
