--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -85,6 +85,7 @@ jobs:
       - id: set-name
         name: Set name of the CloudFormation stack
         run: |-
+          echo "Ref is $GITHUB_REF"
           BASE_NAME=biomage-$(basename $FILE_NAME | sed "s/\..*//")-$CLUSTER_ENV
           echo "::set-output name=stack-name::$BASE_NAME"
         env:
