--- a/.github/workflows/deploy-changed-cf.yaml
+++ b/.github/workflows/deploy-changed-cf.yaml
@@ -76,7 +76,7 @@ jobs:
 
       # This is only necessary for IAM Service Account roles.
       - id: get-oidc
-        if: ${{ contains(matrix.template, 'irsa-') && github.ref == 'master' }}
+        if: ${{ contains(matrix.template, 'irsa-') && github.ref == 'refs/heads/master' }}
         name: Get OIDC provider information for IRSA role
         run: |-
           OIDC_PROVIDER=$(aws eks describe-cluster --name "biomage-$CLUSTER_ENV" --query "cluster.identity.oidc.issuer" --output text | sed -e "s/^https:\/\///")
@@ -93,7 +93,7 @@ jobs:
       
       - id: deploy-template
         name: Deploy CloudFormation template
-        if: ${{ !contains(matrix.template, 'irsa-') && github.ref == 'master' }}
+        if: ${{ !contains(matrix.template, 'irsa-') && github.ref == 'refs/heads/master' }}
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
           parameter-overrides: "Environment=${{ matrix.environment }}"
@@ -103,7 +103,7 @@ jobs:
           capabilities: "CAPABILITY_IAM,CAPABILITY_NAMED_IAM"
 
       - id: deploy-irsa-template
-        if: ${{ contains(matrix.template, 'irsa-') && github.ref == 'master' }}
+        if: ${{ contains(matrix.template, 'irsa-') && github.ref == 'refs/heads/master' }}
         name: Deploy IRSA CloudFormation template
         uses: aws-actions/aws-cloudformation-github-deploy@v1
         with:
