--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -199,7 +199,7 @@ jobs:
 
           helm upgrade flux fluxcd/flux \
             --set git.url=git@github.com:$GITHUB_REPOSITORY \
-            --set git.path="releases/$CLUSTER_ENV"
+            --set git.path="releases/$CLUSTER_ENV" \
             --namespace flux \
             --install --wait
        
