--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "eslint-plugin-import": "^2.20.2",
     "jest": "^26.0.1",
     "nodemon": "^2.0.3",
+    "socket.io-client": "^2.3.0",
+    "socket.io-mock": "^1.3.1",
     "supertest": "^4.0.2"
   },
   "jest": {
