--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Node.js API for the single-cell pipeline.",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:debug": "node --inspect node_modules/.bin/jest --runInBand",
-    "coverage": "jest --coverage",
+    "test": "jest --silent",
+    "test:debug": "node --inspect node_modules/.bin/jest --runInBand --silent",
+    "coverage": "jest --coverage --silent",
     "dev": "nodemon src/app.js",
     "start": "node src/app.js"
   },
