--- a/cf/irsa-api-role.yaml
+++ b/cf/irsa-api-role.yaml
@@ -84,3 +84,11 @@ Resources:
                 Action: 's3:GetObject'
                 Resource:
                   - !Sub "arn:aws:s3:::worker-results-${Environment}/*"
+        - PolicyName: !Sub "can-access-details-of-redis-cluster-${Environment}"
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action: 'elasticache:DescribeReplicationGroups'
+                Resource:
+                  - !Sub "arn:aws:elasticache:${AWS::Region}:${AWS::AccountId}:replicationgroup:biomage-redis-${Environment}"
