--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://gitlab.com/biomage/api#readme",
   "dependencies": {
-    "@kubernetes/client-node": "^0.11.2",
+    "@kubernetes/client-node": "^0.12.0",
     "aws-sdk": "^2.663.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -58,6 +58,8 @@
     "collectCoverageFrom": [
       "src/**/*.js"
     ],
-    "modulePathIgnorePatterns": ["<rootDir>/src/.*/__mocks__"]
+    "modulePathIgnorePatterns": [
+      "<rootDir>/src/.*/__mocks__"
+    ]
   }
 }
