--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -292,14 +292,14 @@ jobs:
       - id: install-ebs-csi-driver
         name: Install AWS EBS Container Storage Interface (CSI) drivers
         run: |-
-          helm install \
+          helm upgrade \
+            aws-ebs-csi-driver https://github.com/kubernetes-sigs/aws-ebs-csi-driver/releases/download/v0.6.0/helm-chart.tgz \
             --namespace kube-system \
-            --name aws-ebs-csi-driver \
             --set enableVolumeScheduling=true \
             --set enableVolumeResizing=true \
             --set enableVolumeSnapshot=true \
             --install --wait \
-            https://github.com/kubernetes-sigs/aws-ebs-csi-driver/releases/download/v0.6.0/helm-chart.tgz
+            
       
       - id: deploy-read-only-group
         name: Deploy read-only permission definition for cluster
