--- a/charts/nodejs/templates/serviceaccount.yaml
+++ b/charts/nodejs/templates/serviceaccount.yaml
@@ -5,3 +5,4 @@ metadata:
   namespace: {{ .Release.Namespace }}
   annotations:
     eks.amazonaws.com/role-arn: "{{ .Values.serviceAccount.iamRole }}"
+    sandboxId: "{{ .Values.biomageCi.sandboxId }}"
