--- a/charts/nodejs/values.yaml
+++ b/charts/nodejs/values.yaml
@@ -98,6 +98,7 @@ networkPolicy:
 biomageCi:
   ref: refs-heads-master
   repo: biomage-ltd/ui
+  sandboxId: default
 
 kubernetes:
   env: production
