--- a/charts/nodejs/templates/network-policy.yaml
+++ b/charts/nodejs/templates/network-policy.yaml
@@ -8,6 +8,7 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    sandboxId: "{{ .Values.biomageCi.sandboxId }}"
 spec:
 {{ toYaml .Values.networkPolicy.spec | indent 2 }}
 {{- end -}}
