--- a/charts/nodejs/templates/service.yaml
+++ b/charts/nodejs/templates/service.yaml
@@ -17,6 +17,7 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    sandboxId: "{{ .Values.biomageCi.sandboxId }}"
 
 spec:
   type: {{ .Values.service.type }}
