--- a/charts/nodejs/templates/ingress.yaml
+++ b/charts/nodejs/templates/ingress.yaml
@@ -49,7 +49,7 @@ spec:
 {{- end }}
 {{- end }}
   rules:
-  - host: {{ printf "%s.scp.biomage.net" (split "/" .Values.biomageCi.repo)._1 }}
+  - host: {{ template "hostname" . }}
     http:
       &httpRule
       paths:
