--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -17,6 +17,9 @@ jobs:
       - id: checkout
         name: Check out source code
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.API_TOKEN_GITHUB }}
+      
       - id: add-manifest-to-repo
         name: Add manifest file to repository.
         run: |-
